--- a/.env.testing
+++ b/.env.testing
@@ -9,10 +9,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rentpesa
+DB_DATABASE=:memory:
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -30,12 +30,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=73d64b1c06a9e4
-MAIL_PASSWORD=ac938b858998db
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS='kings@deveint.com'
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
