--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "fruitcake/laravel-cors": "^2.0.5",
     "guzzlehttp/guzzle": "^7.2",
     "inertiajs/inertia-laravel": "^0.6.9",
+    "intervention/image": "^2.7",
     "laravel/framework": "^9.0",
     "laravel/jetstream": "^3.0",
     "laravel/sanctum": "^2.14",
