--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "laravel/sanctum": "^2.14",
     "laravel/tinker": "^2.7",
     "livewire/livewire": "^2.12",
-    "spatie/laravel-permission": "^5.10"
+    "spatie/laravel-permission": "^5.10",
+    "yoeunes/toastr": "^2.3"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
