--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/jetstream": "^3.0",
     "laravel/sanctum": "^2.14",
     "laravel/tinker": "^2.7",
+    "laravel/ui": "^4.2",
     "livewire/livewire": "^2.12",
     "spatie/laravel-permission": "^5.10",
     "yoeunes/toastr": "^2.3"
